# Python

./: .flake8  .gitignore  README.md  settings.json  setup.cfg
Module00/ex0/: ft_hello_garden.py
Module00/ex1/: ft_garden_name.py
Module00/ex2/: ft_plot_area.py
Module00/ex3/: ft_harvest_total.py
Module00/ex4/: ft_plant_age.py
Module00/ex5/: ft_water_reminder.py
Module00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Module00/ex7/: ft_seed_inventory.py
Module01/ex0/: ft_garden_intro.py
Module01/ex1/: ft_garden_data.py
Module01/ex2/: ft_plant_growth.py
Module01/ex3/: ft_plant_factory.py
Module01/ex4/: ft_garden_security.py
Module01/ex5/: ft_plant_types.py
Module01/ex6/: ft_garden_analytics.py
Module02/ex0/: ft_first_exception.py
Module02/ex1/: ft_raise_exception.py
Module02/ex2/: ft_different_errors.py
Module02/ex3/: ft_custom_errors.py
Module02/ex4/: ft_finally_block.py
Module03/ex0/: ft_command_quest.py
Module03/ex1/: ft_score_analytics.py
Module03/ex2/: ft_coordinate_system.py
Module06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Module07/: battle.py  capacitor.py  struct.txt  tournament.py
Module07/ex0/: __init__.py  (+2 more)
Module08/: .gitignore  .mypy.ini  README.md
Module08/ex1/: loading.py  pyproject.toml  requirements.txt
Module09/: .flake8  .gitignore  README.md
Module10/: .gitignore
(+37 files in other folders)
