[tool.poetry]
name = "ex1"
version = "1.0.0"
description = "Hello Poetry!"
authors = ["raqroca <raqroca-@student.42madrid.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.3.3"
numpy = ">=2.2.6"
matplotlib = ">=3.10.8"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.0.0"
mypy = ">=1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"